--- a/posts/Hoops/index.qmd
+++ b/posts/Hoops/index.qmd
@@ -4,6 +4,7 @@ author: "Sameer Sapre"
 date: "2024-05-16"
 categories: [NBA, code, analysis]
 image: "image.jpg"
+draft: TRUE
 ---
 
 This is a post for my basketball post!
