--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -4,6 +4,7 @@ author: "Harlow Malloc"
 date: "2024-05-16"
 categories: [news, code, analysis]
 image: "image.jpg"
+draft: TRUE
 ---
 
 This is a post with executable code.
