--- a/posts/nfl-game prediction-2/index.Rmd
+++ b/posts/nfl-game prediction-2/index.Rmd
@@ -14,6 +14,10 @@ knitr::opts_chunk$set(echo = TRUE)
 In the previous post, we went over the basics of `tidymodels` and `nflreadr`. We made a simple game prediction model and with the NFL season underway, let's see if we can't check how our model does at predicting the games played so far.
 
 ```{r cars}
-summary(cars)
+# Load prepared data from last post
+matchups24 = read.csv('matchups24.csv')
+
+# Load parsnip fit
+model1 = load('"C:/Users/samee/OneDrive/Documents/gamePred_model2024.rda"')
 ```
 
